--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,24 +1,13 @@
-# build environment
-FROM node:13.14.0-alpine as build
+FROM node:8
+# Create app directory
 WORKDIR /usr/src/app
-ENV PATH /app/node_modules/.bin:$PATH
-COPY package.json /app/package.json
-RUN npm install --silent
-RUN npm install react-scripts -g --silent
-COPY . /app
-RUN npm run build
+# Install app dependencies
+COPY package*.json ./
 
-# production environment
-FROM nginx:1.16.0-alpine
-COPY --from=build /app/build /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
-
-FROM node:12.2.0-alpine as build
-WORKDIR /app
-ENV PATH /app/node_modules/.bin:$PATH
-COPY package.json /app/package.json
 RUN npm install --silent
-RUN npm install react-scripts@3.0.1 -g --silent
-COPY . /app
-RUN npm run build
+# Copy app source code
+COPY . .
+
+#Expose port and start application
+EXPOSE 3000
+CMD ["npm", "start"]
